force-app/main/default/objects/Proforma__c/Proforma__c.object-meta.xml
<CustomObject>
    <label>Proforma</label>
    <nameField>
        <displayFormat>Proforma Nro {0000}</displayFormat>
        <label>Proforma Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proformas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>