force-app/main/default/objects/Proforma__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <defaultValue>&quot;9 de Julio 921 - 3er Piso - Oficina n° 3. Ciudad, Mendoza. &quot;</defaultValue>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>