force-app/main/default/objects/Proforma__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Importador__c</referenceTo>
    <relationshipLabel>Proformas</relationshipLabel>
    <relationshipName>Proformas</relationshipName>
    <type>Lookup</type>
</CustomField>