force-app/main/default/objects/Proforma__c/fields/N_Ref__c.field-meta.xml
<CustomField>
    <fullName>N_Ref__c</fullName>
    <label>N/ Ref</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>