force-app/main/default/objects/Proforma__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <defaultValue>&quot;ANDELUNA CELLARS S.R.L&quot;</defaultValue>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>