force-app/main/default/objects/Proforma__c/fields/Pais_de_Origen__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Origen__c</fullName>
    <defaultValue>&quot;Argentina&quot;</defaultValue>
    <label>Pais de Origen</label>
    <length>50</length>
    <type>Text</type>
</CustomField>