force-app/main/default/objects/Proforma__c/fields/Peso_Neto__c.field-meta.xml
<CustomField>
    <fullName>Peso_Neto__c</fullName>
    <formula>Producto__r.Peso_Bruto__c * Cantidad_de_producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Kilogramos</inlineHelpText>
    <label>Peso Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>