force-app/main/default/objects/Proforma__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <defaultValue>&quot;Ruta Provincial 89 s/n km 11-Gualtallary, Tupungato, Mendoza, Argentina&quot;</defaultValue>
    <label>Pickup</label>
    <type>TextArea</type>
</CustomField>