force-app/main/default/objects/Proforma__c/fields/Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total__c</fullName>
    <formula>Producto__r.Precio_Unitario__c * Cantidad_de_producto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>