force-app/main/default/objects/Proforma__c/fields/Pro_Forma_Invoice_N__c.field-meta.xml
<CustomField>
    <fullName>Pro_Forma_Invoice_N__c</fullName>
    <label>Pro Forma Invoice Nº</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>