force-app/main/default/objects/Proforma__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Proformas</relationshipLabel>
    <relationshipName>Proformas</relationshipName>
    <type>Lookup</type>
</CustomField>