force-app/main/default/objects/Proforma__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order #</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>