force-app/main/default/objects/Proforma__c/fields/Tel_Fax__c.field-meta.xml
<CustomField>
    <fullName>Tel_Fax__c</fullName>
    <defaultValue>&quot;00 (54 261) 4299 299&quot;</defaultValue>
    <label>Tel/Fax</label>
    <type>Phone</type>
</CustomField>